cmake_minimum_required(VERSION 3.11)

project(BrokenLine-v1 CXX)

set(CMAKE_CXX_STANDARD 23)

# Специфичные настройки для компилятора Visual Studio
if(MSVC)
    # Генерируем статическую заглушку для динамических библиотек
    set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS true)

    # Включаем высокий уровень предупреждений
    if(CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
        string(REGEX REPLACE "/W[0-4]" "/W4" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
    else()
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
    endif()
endif()
include(FetchContent)
FetchContent_Declare(googletest URL https://github.com/google/googletest/archive/6b63c98ac43efc992122f1da12aaf0a0e0658206.zip)
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

# Объявляем библиотеку
add_library(PolyLine-v1 INTERFACE "include/PolyLine.h")
target_include_directories(PolyLine-v1 INTERFACE "include")

add_executable(PolyLine-v1-main  "App/main.cc" )
target_link_libraries(PolyLine-v1-main PolyLine-v1)

add_executable(PolyLine-v1-tests "test/PolyLine_test.cc")
target_link_libraries(PolyLine-v1-tests PolyLine-v1 GTest::gtest_main)
